Pin survey sidebar 60px from top. Fix vertical “jumping” of the sidebar when pinning.

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -325,6 +325,9 @@ i.survey-status {
 
 .sidebar.pinned {
   width: 24.9vw;
+  .wizard {
+    margin-top: 0px;
+  }
 }
 
 
